	* Make --queryon, --queryoff work with or without targets on cmd line.

2002-07-29 dun
	* Fixed parms to gethostbyaddr().

2002-08-01 garlick
	* Do not use ${srcbin} for products.  Clean up other Makefile targets.
	* Added --telemetry to client to allow us to watch protocol happen.
	* Change client to not request list of nodes from daemon unless
	  requesting status.
	* Convert completely over to hostlist.c routines in client.
	* Remove --soft option and always warn if plug=on and node=off.
	* Removed duplicate hostlist handling from pm_string.c.
	* Added powerman init script

2002-08-02 garlick
	* A bit more cleanup in pm_string.c.
	* ON, OFF changed to ST_ON, ST_OFF
	* Transferred all remaining inline review comments.
	* Reworked log.c.
	* Fixed all [v]snprintf's to check for both result == -1 
  	  (glibc <= 2.0.6) and result > len (glibc >= 2.1, C99 standard).

2002-08-05 garlick
	* Moved string stuff out of buffer.c into util.c and refactored.
	* Found problem with short reads, process_script() would delete
	  actions if they didn't match the partial buffer.
	* Config file cleanup (removed second expect "completion" regex,
	  cluster name).
	* Took vicebox.dev out of spec file install.
	* Made a general helper function for wrapped regcomp special
	  character expansion.

2002-08-06 garlick
	* Added --telemetry option to server.

2002-08-07 garlick
	* Did away with Log - just use syslog.  Removed log from configuration 
	  syntax.
	* Added delay back into default powerman.conf.
	* Added "\nnn" (octal byte) support to config file for expect/send 
	  sequences.

2002-08-08 garlick
	* Make some char *'s into unsigned char *'s that are carrying
	  non-printable values such as \376 (baytech telnet telnet handshake)).
	* Redo telemetry logging to support callback at the Buffer level.
	* Telemetry logging on servern now shows when expect or delay
	  commands are being processed.
	* Updated baytech config.  This version logs in on the testbed baytech.