@@ -31,7 +31,7 @@ begin protocol specification
 	on string  "On"
 	all string "0"
 	size "8"
-	device timeout "2.0"
+	device timeout "10.0"
 	string interpretation mode "LITERAL"
 	begin PM_LOG_IN 
 		expect "\n"
