@@ -121,4 +121,9 @@
 	* Redo telemetry logging to support callback at the Buffer level.
 	* Telemetry logging on servern now shows when expect or delay
 	  commands are being processed.
-	* Updated baytech config.  This version logs in on the testbed baytech.
+	* Updated baytech and icebox configs to use 10 sec timeout.
+	  Baytech at least seems to require > 2sec to respond sometimes.
+	* Fix get_String_from_Buffer() to only consume buffer up to and
+	  including regex match - not whole buffer.
+	* Server telemetry now shows the buffer contents when reporting
+	  no match.
